# iterate-pr-skill

./: .gitignore  CLAUDE.md  README.md  SKILL.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
agents/: openai.yaml
providers/: __init__.py  _base.py  _core.py  codacy.py  codecov.py  coderabbit.py  cursor.py  sentry.py  supabase.md  supabase.py  vercel.py
scripts/: fetch_pr_checks.py  fetch_pr_feedback.py  watch_pr_state.py
skills/iterate-pr/: SKILL.md
skills/iterate-pr/providers/: README.md  __init__.py  _base.py  codacy.py  codecov.md  sentry.py  supabase.py  vercel.py
tests/: __init__.py  test_fetch_pr_checks.py  test_fetch_pr_feedback.py  test_provider_codecov.py  test_provider_others.py  test_provider_supabase.py  test_providers_base.py  test_providers_registry.py  test_watch_pr_state.py
